Update page with local images and new google map for horgen.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/48.jpg" class="img-fluid" alt="">
+              <img src="img/product/48.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -210,7 +210,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/49.jpg" class="img-fluid" alt="">
+              <img src="img/product/49.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -226,7 +226,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/29.jpg" class="img-fluid" alt="">
+              <img src="img/product/29.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -248,7 +248,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/10.jpg" class="img-fluid" alt="">
+              <img src="img/product/10.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -264,7 +264,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/11.jpg" class="img-fluid" alt="">
+              <img src="img/product/11.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -280,7 +280,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="https://mdbootstrap.com/img/Photos/Others/images/13.jpg" class="img-fluid" alt="">
+              <img src="img/product/13.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -434,7 +434,7 @@
               <!--Grid column-->
               <div class="col-lg-4 col-md-12 mb-3">
 
-                <p><i class="fa fa-map fa-1x mr-2 grey-text"></i>New York, NY 10012</p>
+                <p><i class="fa fa-map fa-1x mr-2 grey-text"></i>Horgen, ZH 8135</p>
 
               </div>
               <!--Grid column-->
@@ -459,7 +459,12 @@
             <!--Grid row-->
 
             <!--Google map-->
-            <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div>
+            <!-- <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div> -->
+
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3220.0969760972835!2d8.593592788807543!3d47.26023964595421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa8d2a3098bd7%3A0xb9bf3217a76c1bfe!2sHorgen!5e0!3m2!1sde!2sch!4v1588411824680!5m2!1sde!2sch"
+              width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+              tabindex="0"></iframe>
 
           </div>
           <!--Grid column-->
@@ -701,7 +706,7 @@
   <script src="https://maps.google.com/maps/api/js"></script>
 
   <!-- Google Maps settings -->
-  <script>
+  <!--<script>
     // Regular map
     function regular_map() {
       var var_location = new google.maps.LatLng(40.725118, -73.997699);
@@ -723,7 +728,7 @@
 
     // Initialize maps
     google.maps.event.addDomListener(window, 'load', regular_map);
-  </script>
+  </script>-->
 
 </body>
 
