Update page with gallery without pushing pictures.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
 
             <div class="view overlay z-depth-1-half">
-              <img src="img/product/13.jpg" class="img-fluid" alt="">
+              <img src="img/product/jmk13.jpg" class="img-fluid" alt="">
               <div class="mask rgba-white-slight"></div>
             </div>
 
@@ -375,7 +375,7 @@
               placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis
               debitis aut rerum.</p>
             <p>by <a><strong>Jessica Clark</strong></a>, 26/08/2016</p>
-            <a class="btn btn-primary btn-md">Read more</a>
+            <a href="image-gallery/index.html" class="btn btn-primary btn-md"> see gallery</a>
 
           </div>
           <!--Grid column-->
